random/credit_multiplier/style.css
table,
td {
    border: 1px solid #333;
}

thead,
tfoot,
.ans_tr {
    background-color: #333;
    color: #fff;
}

body{
    margin: 0px;
    max-width: 100vw;
    overflow: hidden;
}

h1 {
    width: auto;
    margin: 20px;
    font-size: 35px;
    text-align: center;
    margin-bottom: 10px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

p{
    width: auto;
    text-align: center;
    margin-top: 0px;
    font-size: larger;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
}

table{
    min-width: 100%;
    max-width: 100%;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    text-align: center;
    padding: 5px;
}

